[package]
name = "chip8_emulator"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8 = {git = "https://github.com/andrewgoacher/chip8"}
sdl2 = { version = "0.32.0", features = ["bundled", "static-link"] }
getopts = "0.2"
